#    Copyright (C) 2019  John Goerzen <jgoerzen@complete.org
#
#    This program is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.


[package]
name = "lorapipe"
version = "1.0.0"
authors = ["John Goerzen <jgoerzen@complete.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"
log = "0.4"
simplelog = {version = "^0.7.4", default-features = false}
hex = "0.4.0"
crossbeam-channel = "0.3.9"
format_escape_default = "0.1.1"
structopt = "0.3"
